[package]
name = "changebase"
authors = ["Mark Toda"]
license = "GPL-3.0"
version = "0.1.0"
edition = "2018"
description = "Light CLI tool to convert numbers from one base to another."
repository = "https://github.com/marktoda/changebase"

[[bin]]
name = "changebase"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
num = "0.4.0"
thiserror = "1.0.30"
